# EasyGameChat

./: .gitignore  README.md  go.mod  main.go
clients/c-cpp/: EasyGameChat.h
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/easygamechat/: __init__.py  easygamechat.py
examples/c-cpp/: CMakeLists.txt  main.cpp
examples/python/: main.py
scripts/: generate_tls.bat  generate_tls.sh
server/: client.go  message.go  server.go  validation.go
